--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 venv/
 __pycache__/
+
+# Local .terraform directories
+**/.terraform/*
+
+#  Ignore variables files
+*.auto.tfvars
+
+#  Ignore override files
+*.tfoverride
+
+#  Ignore environment-specific files
+.envrc
+
+#  Ignore CLI configuration files
+.terraformrc
+terraform.rc
