--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,8 +14,6 @@ jobs:
   currency_exchange:
     name: 'currency_exchange'
     runs-on: ubuntu-latest
-    # environment: production
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
@@ -38,42 +36,37 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_CURRENCY_EXCHANGE_KEY }}
 
-    # GCloud Setup
+    # Set up Google Cloud SDK (store credentials securely!)
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v2.1.1
       with:
         project_id: portfolio-436507
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.GCP_CURRENCY_EXCHANGE_KEY }}
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    # Install Terraform
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.8.5
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    # Initialize Terraform working directory
     - name: Terraform Init
-      run: terraform init
+      run: terraform init && if [ $? -ne 0 ]; then exit 1; fi
       working-directory: infra/
 
-    # Checks that all Terraform configuration files adhere to a canonical format
+    # Terraform Format
     - name: Terraform Format
-      run: terraform fmt
+      run: terraform fmt && if [ $? -ne 0 ]; then exit 1; fi
       working-directory: infra/
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GCP_CURRENCY_EXCHANGE_KEY}}  #replace it with necessary SA for the cloud function.
 
-    # Generates an execution plan for Terraform
+    # Generate Terraform execution plan
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan -input=false && if [ $? -ne 0 ]; then exit 1; fi
       working-directory: infra/
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GCP_CURRENCY_EXCHANGE_KEY}}
 
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    # Apply Terraform changes (only on push to main)
     - name: Terraform Apply
-      # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false && if [ $? -ne 0 ]; then exit 1; fi
       working-directory: infra/
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GCP_CURRENCY_EXCHANGE_KEY}}
